[package]
name = "computor_v2"
version = "0.1.0"
authors = ["Anatoliy Lischynsky <iamnotacake@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true

[build-dependencies]
lalrpop = "*"
peg = "*"

[dependencies]
color-backtrace = "*"
lalrpop-util = "*"
regex = "*"
rustyline = "6.*"
failure = "*"
failure_derive = "*"
